tooling/nargo_cli/tests/snapshots/execution_success/loop_invariant_regression/execute__tests__force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ (1, _1) 0 ]], outputs: []",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32838 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 2 }, Const { destination: Relative(4), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(3), offset_address: Relative(4) }, Cast { destination: Direct(32836), source: Direct(32836), bit_size: Integer(U32) }, Cast { destination: Direct(32837), source: Direct(32837), bit_size: Integer(U32) }, Mov { destination: Relative(1), source: Direct(32836) }, Mov { destination: Relative(2), source: Direct(32837) }, Call { location: 15 }, Call { location: 17 }, Const { destination: Relative(1), bit_size: Integer(U32), value: 32838 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 0 }, Stop { return_data: HeapVector { pointer: Relative(1), size: Relative(2) } }, Const { destination: Direct(32835), bit_size: Integer(U32), value: 4294967295 }, Return, Call { location: 207 }, BinaryIntOp { destination: Relative(4), op: Mul, bit_size: U32, lhs: Relative(1), rhs: Relative(2) }, Const { destination: Relative(6), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(5), op: Equals, bit_size: U32, lhs: Relative(6), rhs: Relative(2) }, JumpIf { condition: Relative(5), location: 26 }, BinaryIntOp { destination: Relative(8), op: Div, bit_size: U32, lhs: Relative(4), rhs: Relative(2) }, BinaryIntOp { destination: Relative(7), op: Equals, bit_size: U32, lhs: Relative(8), rhs: Relative(1) }, JumpIf { condition: Relative(7), location: 26 }, Call { location: 213 }, BinaryIntOp { destination: Relative(5), op: Mul, bit_size: U32, lhs: Relative(4), rhs: Relative(1) }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U32, lhs: Relative(7), rhs: Relative(1) }, JumpIf { condition: Relative(6), location: 34 }, BinaryIntOp { destination: Relative(9), op: Div, bit_size: U32, lhs: Relative(5), rhs: Relative(1) }, BinaryIntOp { destination: Relative(8), op: Equals, bit_size: U32, lhs: Relative(9), rhs: Relative(4) }, JumpIf { condition: Relative(8), location: 34 }, Call { location: 213 }, Const { destination: Relative(4), bit_size: Integer(U32), value: 12 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U32, lhs: Relative(5), rhs: Relative(4) }, JumpIf { condition: Relative(6), location: 39 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, Const { destination: Relative(5), bit_size: Integer(U32), value: 5 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U32, lhs: Relative(1), rhs: Relative(5) }, Cast { destination: Relative(7), source: Relative(2), bit_size: Integer(U8) }, Cast { destination: Relative(5), source: Relative(7), bit_size: Integer(U32) }, Cast { destination: Relative(7), source: Relative(5), bit_size: Field }, Const { destination: Relative(8), bit_size: Field, value: 256 }, BinaryFieldOp { destination: Relative(9), op: Sub, lhs: Relative(8), rhs: Relative(7) }, Const { destination: Relative(10), bit_size: Integer(U32), value: 0 }, Const { destination: Relative(11), bit_size: Integer(U32), value: 4 }, Const { destination: Relative(12), bit_size: Integer(U8), value: 3 }, Const { destination: Relative(13), bit_size: Integer(U8), value: 128 }, Const { destination: Relative(14), bit_size: Field, value: 3 }, Const { destination: Relative(15), bit_size: Integer(U1), value: 1 }, Const { destination: Relative(16), bit_size: Integer(U8), value: 127 }, Const { destination: Relative(17), bit_size: Field, value: 127 }, Const { destination: Relative(18), bit_size: Integer(U16), value: 12 }, Const { destination: Relative(19), bit_size: Integer(U32), value: 1 }, Mov { destination: Relative(3), source: Relative(10) }, Jump { location: 58 }, BinaryIntOp { destination: Relative(20), op: LessThan, bit_size: U32, lhs: Relative(3), rhs: Relative(11) }, JumpIf { condition: Relative(20), location: 133 }, Jump { location: 61 }, Const { destination: Relative(5), bit_size: Integer(U32), value: 2 }, Mov { destination: Relative(6), source: Direct(1) }, Const { destination: Relative(7), bit_size: Integer(U32), value: 6 }, BinaryIntOp { destination: Direct(1), op: Add, bit_size: U32, lhs: Direct(1), rhs: Relative(7) }, IndirectConst { destination_pointer: Relative(6), bit_size: Integer(U32), value: 1 }, BinaryIntOp { destination: Relative(7), op: Add, bit_size: U32, lhs: Relative(6), rhs: Direct(2) }, Mov { destination: Relative(8), source: Relative(7) }, Store { destination_pointer: Relative(8), source: Relative(5) }, BinaryIntOp { destination: Relative(8), op: Add, bit_size: U32, lhs: Relative(8), rhs: Direct(2) }, Store { destination_pointer: Relative(8), source: Relative(5) }, BinaryIntOp { destination: Relative(8), op: Add, bit_size: U32, lhs: Relative(8), rhs: Direct(2) }, Store { destination_pointer: Relative(8), source: Relative(5) }, BinaryIntOp { destination: Relative(8), op: Add, bit_size: U32, lhs: Relative(8), rhs: Direct(2) }, Store { destination_pointer: Relative(8), source: Relative(5) }, BinaryIntOp { destination: Relative(8), op: Add, bit_size: U32, lhs: Relative(8), rhs: Direct(2) }, Store { destination_pointer: Relative(8), source: Relative(5) }, Mov { destination: Relative(3), source: Relative(10) }, Jump { location: 79 }, BinaryIntOp { destination: Relative(5), op: LessThan, bit_size: U32, lhs: Relative(3), rhs: Relative(11) }, JumpIf { condition: Relative(5), location: 108 }, Jump { location: 82 }, Const { destination: Relative(5), bit_size: Integer(U32), value: 3 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U32, lhs: Relative(2), rhs: Relative(5) }, Mov { destination: Relative(3), source: Relative(10) }, Jump { location: 86 }, BinaryIntOp { destination: Relative(2), op: LessThan, bit_size: U32, lhs: Relative(3), rhs: Relative(11) }, JumpIf { condition: Relative(2), location: 89 }, Jump { location: 107 }, JumpIf { condition: Relative(6), location: 106 }, Jump { location: 91 }, BinaryIntOp { destination: Relative(2), op: Mul, bit_size: U32, lhs: Direct(32835), rhs: Relative(1) }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(5), op: Equals, bit_size: U32, lhs: Relative(7), rhs: Relative(1) }, JumpIf { condition: Relative(5), location: 99 }, BinaryIntOp { destination: Relative(9), op: Div, bit_size: U32, lhs: Relative(2), rhs: Relative(1) }, BinaryIntOp { destination: Relative(8), op: Equals, bit_size: U32, lhs: Relative(9), rhs: Direct(32835) }, JumpIf { condition: Relative(8), location: 99 }, Call { location: 213 }, BinaryIntOp { destination: Relative(5), op: Equals, bit_size: U32, lhs: Relative(2), rhs: Relative(4) }, JumpIf { condition: Relative(5), location: 103 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, BinaryIntOp { destination: Relative(2), op: Add, bit_size: U32, lhs: Relative(3), rhs: Relative(19) }, Mov { destination: Relative(3), source: Relative(2) }, Jump { location: 86 }, Jump { location: 107 }, Return, BinaryIntOp { destination: Relative(8), op: Add, bit_size: U32, lhs: Relative(6), rhs: Direct(2) }, BinaryIntOp { destination: Relative(9), op: Add, bit_size: U32, lhs: Relative(8), rhs: Relative(3) }, Load { destination: Relative(7), source_pointer: Relative(9) }, BinaryIntOp { destination: Relative(8), op: Equals, bit_size: U32, lhs: Relative(7), rhs: Relative(1) }, JumpIf { condition: Relative(8), location: 115 }, Const { destination: Relative(9), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(9) } }, Mov { destination: Relative(5), source: Relative(10) }, Jump { location: 117 }, BinaryIntOp { destination: Relative(7), op: LessThan, bit_size: U32, lhs: Relative(5), rhs: Relative(11) }, JumpIf { condition: Relative(7), location: 123 }, Jump { location: 120 }, BinaryIntOp { destination: Relative(5), op: Add, bit_size: U32, lhs: Relative(3), rhs: Relative(19) }, Mov { destination: Relative(3), source: Relative(5) }, Jump { location: 79 }, BinaryIntOp { destination: Relative(8), op: Add, bit_size: U32, lhs: Relative(6), rhs: Direct(2) }, BinaryIntOp { destination: Relative(9), op: Add, bit_size: U32, lhs: Relative(8), rhs: Relative(5) }, Load { destination: Relative(7), source_pointer: Relative(9) }, BinaryIntOp { destination: Relative(8), op: Equals, bit_size: U32, lhs: Relative(7), rhs: Relative(1) }, JumpIf { condition: Relative(8), location: 130 }, Const { destination: Relative(9), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(9) } }, BinaryIntOp { destination: Relative(7), op: Add, bit_size: U32, lhs: Relative(5), rhs: Relative(19) }, Mov { destination: Relative(5), source: Relative(7) }, Jump { location: 117 }, JumpIf { condition: Relative(6), location: 135 }, Jump { location: 204 }, BinaryIntOp { destination: Relative(20), op: Mul, bit_size: U32, lhs: Direct(32835), rhs: Relative(2) }, Const { destination: Relative(22), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(21), op: Equals, bit_size: U32, lhs: Relative(22), rhs: Relative(2) }, JumpIf { condition: Relative(21), location: 143 }, BinaryIntOp { destination: Relative(24), op: Div, bit_size: U32, lhs: Relative(20), rhs: Relative(2) }, BinaryIntOp { destination: Relative(23), op: Equals, bit_size: U32, lhs: Relative(24), rhs: Direct(32835) }, JumpIf { condition: Relative(23), location: 143 }, Call { location: 213 }, Cast { destination: Relative(21), source: Relative(5), bit_size: Integer(U8) }, BinaryIntOp { destination: Relative(22), op: Mul, bit_size: U8, lhs: Relative(12), rhs: Relative(21) }, Cast { destination: Relative(21), source: Relative(22), bit_size: Integer(U16) }, Cast { destination: Relative(23), source: Relative(21), bit_size: Integer(U8) }, Cast { destination: Relative(22), source: Relative(23), bit_size: Integer(U16) }, Cast { destination: Relative(21), source: Relative(5), bit_size: Integer(U8) }, BinaryIntOp { destination: Relative(23), op: LessThan, bit_size: U8, lhs: Relative(21), rhs: Relative(13) }, Not { destination: Relative(21), source: Relative(23), bit_size: U1 }, Cast { destination: Relative(24), source: Relative(23), bit_size: Field }, BinaryFieldOp { destination: Relative(23), op: Mul, lhs: Relative(24), rhs: Relative(7) }, Cast { destination: Relative(24), source: Relative(21), bit_size: Field }, BinaryFieldOp { destination: Relative(25), op: Mul, lhs: Relative(24), rhs: Relative(9) }, BinaryFieldOp { destination: Relative(24), op: Add, lhs: Relative(23), rhs: Relative(25) }, BinaryFieldOp { destination: Relative(23), op: Mul, lhs: Relative(14), rhs: Relative(24) }, Cast { destination: Relative(24), source: Relative(23), bit_size: Field }, Const { destination: Relative(25), bit_size: Field, value: 255 }, BinaryFieldOp { destination: Relative(26), op: LessThanEquals, lhs: Relative(24), rhs: Relative(25) }, JumpIf { condition: Relative(26), location: 162 }, Call { location: 213 }, Cast { destination: Relative(24), source: Relative(23), bit_size: Integer(U8) }, Cast { destination: Relative(23), source: Relative(21), bit_size: Integer(U8) }, BinaryIntOp { destination: Relative(21), op: Add, bit_size: U8, lhs: Relative(13), rhs: Relative(23) }, BinaryIntOp { destination: Relative(23), op: LessThan, bit_size: U8, lhs: Relative(24), rhs: Relative(21) }, JumpIf { condition: Relative(23), location: 168 }, Call { location: 213 }, Cast { destination: Relative(21), source: Relative(22), bit_size: Integer(U8) }, BinaryIntOp { destination: Relative(23), op: Mul, bit_size: U8, lhs: Relative(21), rhs: Relative(16) }, Cast { destination: Relative(21), source: Relative(23), bit_size: Integer(U16) }, Cast { destination: Relative(24), source: Relative(21), bit_size: Integer(U8) }, Cast { destination: Relative(23), source: Relative(24), bit_size: Integer(U16) }, Cast { destination: Relative(21), source: Relative(22), bit_size: Integer(U8) }, BinaryIntOp { destination: Relative(24), op: LessThan, bit_size: U8, lhs: Relative(21), rhs: Relative(13) }, Not { destination: Relative(21), source: Relative(24), bit_size: U1 }, Cast { destination: Relative(25), source: Relative(22), bit_size: Field }, Cast { destination: Relative(22), source: Relative(24), bit_size: Field }, BinaryFieldOp { destination: Relative(24), op: Mul, lhs: Relative(22), rhs: Relative(25) }, BinaryFieldOp { destination: Relative(22), op: Sub, lhs: Relative(8), rhs: Relative(25) }, Cast { destination: Relative(25), source: Relative(21), bit_size: Field }, BinaryFieldOp { destination: Relative(26), op: Mul, lhs: Relative(25), rhs: Relative(22) }, BinaryFieldOp { destination: Relative(22), op: Add, lhs: Relative(24), rhs: Relative(26) }, BinaryFieldOp { destination: Relative(24), op: Mul, lhs: Relative(22), rhs: Relative(17) }, Cast { destination: Relative(22), source: Relative(24), bit_size: Field }, Const { destination: Relative(25), bit_size: Field, value: 255 }, BinaryFieldOp { destination: Relative(26), op: LessThanEquals, lhs: Relative(22), rhs: Relative(25) }, JumpIf { condition: Relative(26), location: 189 }, Call { location: 213 }, Cast { destination: Relative(22), source: Relative(24), bit_size: Integer(U8) }, Cast { destination: Relative(24), source: Relative(21), bit_size: Integer(U8) }, BinaryIntOp { destination: Relative(21), op: Add, bit_size: U8, lhs: Relative(13), rhs: Relative(24) }, BinaryIntOp { destination: Relative(24), op: LessThan, bit_size: U8, lhs: Relative(22), rhs: Relative(21) }, JumpIf { condition: Relative(24), location: 195 }, Call { location: 213 }, BinaryIntOp { destination: Relative(21), op: Equals, bit_size: U16, lhs: Relative(23), rhs: Relative(18) }, JumpIf { condition: Relative(21), location: 199 }, Const { destination: Relative(22), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(22) } }, BinaryIntOp { destination: Relative(21), op: Equals, bit_size: U32, lhs: Relative(20), rhs: Relative(4) }, JumpIf { condition: Relative(21), location: 203 }, Const { destination: Relative(22), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(22) } }, Jump { location: 204 }, BinaryIntOp { destination: Relative(20), op: Add, bit_size: U32, lhs: Relative(3), rhs: Relative(19) }, Mov { destination: Relative(3), source: Relative(20) }, Jump { location: 58 }, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 212 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 17843811134343075018 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 7233212735005103307 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]"
  ],
  "debug_symbols": "pZfLbuJAEEX/xWsW/ayu5ldGUUSIEyFZgBwYaRTx71PlrkuShVl0NpwL9j3YptzA5/A6vlzfnw/Ht9PHsP3zObzMh2k6vD9Pp/3ucjgd5dXPwemD52EbNoOvC4Jr8A2hITakhtxAwzYKSgM31AXRNfiG0BAbxJIEuYEaSgM3iIU2Q3INYimC0CAWFqSGvCBLr24Gkj29FwZjNCZjNpKxGNlYG4szmq+Yr5ivmK+Yr5ivaF8uDev+ch4cjbo9b4aqPjmjGozRmIzZSMZiZKP65Rp45xA8QkCICFpiDdWCdwjaqhoCQkRICPLewUlYJsJr0CnQSVnmYAkZgbBPQWCEaiHCo598iBoIoSAwQrWgM9CCRwgIcRkIb6PgbRZ8ImMxsrE2Zmf0xmCMRvNl82XzZfNl82XzkfnIfGQ+Mh+Zj8xH5iPzkfl0+oJMi9fxa8EjBISIkBAyAiEUBEaAmWFmmBlmhplhZpgZZoaZYWaYK8wV5gpzhbnCrHMesgZCKAiMoGbSBckheISAoEK63TYDlrXnyzyOuqp9W+dk9Tvv5vF4GbbH6zRthr+76brs9HHeHRdedrNslWkfj69CEb4dplHTbfPVdutVuaBWlsO81/PPvl/vp5qsn2rt6GcfrZ899/Qjo5/iWv/B+QdXcP4xr/Xzep9ytj6R7+iXUK1fInX186/6FDE8lHzP9Uv3+aGw+vk9EDAFEzDFLgHjCnCljjOICQcQef0M4oNbKDgygw++T/F1G3pZf/qOgtL9KEruU1RcSvnScz0fRq24neSrPv7aQF0Gj1uqxq6TkJ8i9+vgUvq9omdhIMbCRusL68OFAeNQ1hfGh/1473NPv9z75Wf/SZ7t9of5x0/6m5rmw+5lGu3p2/W4/7b18u+MLfhLcJ5P+/H1Oo9q+va/QB7/6LouN+OT/iDUpzL3weenm779fw==",
  "file_map": {
    "50": {
      "source": "// Tests a simple loop where we expect loop invariant instructions\n// to be hoisted to the loop's pre-header block.\nglobal U32_MAX: u32 = 4294967295;\n\nfn main(x: u32, y: u32) {\n    simple_loop(4, x, y);\n    loop_with_predicate(4, x, y);\n    array_read_loop(4, x);\n    //Safety: testing for failing assert under condition\n    unsafe {\n        loop_with_break_under_predicate(4, y, x);\n    }\n}\n\nfn simple_loop(upper_bound: u32, x: u32, y: u32) {\n    for _ in 0..upper_bound {\n        let mut z = x * y;\n        z = z * x;\n        assert_eq(z, 12);\n    }\n}\n\nfn loop_with_predicate(upper_bound: u32, x: u32, y: u32) {\n    for _ in 0..upper_bound {\n        if x == 5 {\n            let mut z = U32_MAX * y;\n            assert_eq(((3 * y as i8) * 127), 12);\n            assert_eq(z, 12);\n        }\n    }\n}\n\nfn array_read_loop(upper_bound: u32, x: u32) {\n    let arr = [2; 5];\n    for i in 0..upper_bound {\n        for j in 0..upper_bound {\n            for _ in 0..upper_bound {\n                assert_eq(arr[i], x);\n                assert_eq(arr[j], x);\n            }\n        }\n    }\n}\n\nunconstrained fn loop_with_break_under_predicate(upper_bound: u32, x: u32, y: u32) {\n    for _ in 0..upper_bound {\n        if x == 3 {\n            break;\n        }\n        let mut z = U32_MAX * y;\n        assert_eq(z, 12);\n    }\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
