tooling/nargo_cli/tests/snapshots/execution_success/loop_invariant_regression/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v1: u32, v2: u32):
    (no terminator instruction)
}
